--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     padding: 0;
     overflow: hidden;
     background: #000;
-    cursor: url('jimbo.png') 16 16, auto;
+    cursor: url('/jimbo.png') 16 16, auto;
 }
 
 #container {
     width: 100vw;
     height: 100vh;
 }
+
 
